--- a/amigurumi-app/src/app/product/new-product/new-product.component.html
+++ b/amigurumi-app/src/app/product/new-product/new-product.component.html
@@ -10,7 +10,7 @@
                 <hr>
             </div>
             <!-- Form START -->
-          
+
 
             <form class="file-upload" #form="ngForm" (ngSubmit)="submitHandler(form)">
                 <div class="row mb-5 gx-5">
@@ -37,7 +37,7 @@
                                     </div>
                                 </ng-container>
 
-                            
+
                                 <!-- Description -->
                                 <div class="col-md-12">
                                     <label for="description" class="form-label">Description</label>
@@ -58,11 +58,11 @@
                                 <!-- Photo -->
                                 <div class="col-md-12">
                                     <label for="exampleInputPassword3" class="form-label">Photo</label>
+                                    <!-- Добавете двустранна връзка с imageUrl -->
                                     <input type="text" class="form-control" id="exampleInputPassword3"
-                                    name="imageUrl" ngModel required
-                                        minlength="4" #photoInput="ngModel"
-                                    >
-                                </div>
+                                           name="imageUrl" [(ngModel)]="imageUrl" required
+                                           minlength="4" #photoInput="ngModel">
+                                  </div>
                                 <!-- error msg-titleInput-->
                                 <ng-container *ngIf="photoInput.touched">
 
@@ -80,22 +80,22 @@
                                     <p>Skill Level:</p>
                                     <div class="form-check">
 
-                                        <input class="form-check-input" type="radio" name="skillLevel"
-                                         id="easy" value="easy" checked [(ngModel)]="user.skillLevel">
+                                        <input class="form-check-input" type="radio" name="skillLevel" id="easy"
+                                            value="easy" checked [(ngModel)]="user.skillLevel">
                                         <label class="form-check-label" for="easy">
                                             Easy
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="skillLevel"
-                                            id="intermediate" value="intermediate" [(ngModel)]="user.skillLevel">
+                                        <input class="form-check-input" type="radio" name="skillLevel" id="intermediate"
+                                            value="intermediate" [(ngModel)]="user.skillLevel">
                                         <label class="form-check-label" for="intermediate">
                                             Intermediate
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="skillLevel"
-                                            id="advanced" value="advanced" [(ngModel)]="user.skillLevel">
+                                        <input class="form-check-input" type="radio" name="skillLevel" id="advanced"
+                                            value="advanced" [(ngModel)]="user.skillLevel">
                                         <label class="form-check-label" for="advanced">
                                             Advanced
                                         </label>
@@ -106,21 +106,22 @@
                                     <p>Category:</p>
                                     <div class="form-check">
 
-                                        <input class="form-check-input" type="radio" name="category" id="baby" value="baby" [(ngModel)]="user.category">
+                                        <input class="form-check-input" type="radio" name="category" id="baby"
+                                            value="baby" [(ngModel)]="user.category">
                                         <label class="form-check-label" for="baby">
                                             Baby
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="category" id="animals"
-                                        value="animals" [(ngModel)]="user.category"  checked>
+                                            value="animals" [(ngModel)]="user.category" checked>
                                         <label class="form-check-label" for="animals">
                                             Animals
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="category" id="others"
-                                        value="others" [(ngModel)]="user.category"   checked>
+                                            value="others" [(ngModel)]="user.category" checked>
                                         <label class="form-check-label" for="others">
                                             Others
                                         </label>
@@ -162,42 +163,47 @@
                         </div>
                     </div>
                     <!-- Upload profile -->
+                   
                     <div class="col-xxl-4">
                         <div class="bg-secondary-soft px-4 py-5 rounded">
                             <div class="row g-3">
                                 <h4 class="mb-4 mt-0">Upload amigurumi photo</h4>
                                 <div class="text-center">
+                                    <!-- Show the uploaded image if imageUrl is available -->
+                                 
 
-                                    <div class="square position-relative display-2 mb-3">
+                                    <div class="image-container"*ngIf="imageUrl">
+                                        <img [src]="imageUrl" class="card-img-top" alt="product image">
+                                    </div>
+                                    <div class="image-container"*ngIf="imageUrl">
+                                        <img [src]="imageUrl" class="card-img-top" alt="product image">
+                                    </div>
+                                    <!-- Show the default image if imageUrl is not available -->
+                                    <div class="square position-relative display-2 mb-3" *ngIf="!imageUrl">
                                         <i
                                             class="fas fa-regular fa-image position-absolute top-50 start-50 translate-middle text-secondary"></i>
                                     </div>
-                                    <!-- Button -->
-                                    <div class="d-flex justify-content-evenly">
-                                        <input type="file" id="customFile" name="file" hidden="">
-                                        <label class="btn btn-primary" for="customFile">Upload</label>
-                                        <button type="button" class="btn btn-info">Remove</button>
-                                    </div>
-                                    <!-- Content -->
-                                    <p class="text-muted mt-3 mb-0"><span class="me-1">Note:</span>Minimum size 300px x
-                                        300px</p>
+                                   
                                 </div>
                             </div>
                         </div>
                     </div>
 
+
                 </div> <!-- Row END -->
                 {{form.value |json}}
                 <!-- button -->
-                <div class="d-flex flex-row mb-3">
-                    <button type="submit" class="btn btn-primary btn-lg" 
-                    [disabled]="form.invalid"
-                    [style]="{backgroundColor:form.invalid ? '#e25562':' #6658d3'}"
-                    >Add new Amigurumi</button>
+                <div class="d-flex flex-row gap-2 mb-3">
+                    <button type="submit" class="btn btn-outline-dark">
+                        <a [routerLink]="['../']" class=" custom-btn">Back</a></button>
 
+                    <button type="submit" class="btn btn-primary btn-lg" [disabled]="form.invalid"
+                        [style]="{backgroundColor:form.invalid ? '#e25562':' #6658d3'}">Add new Amigurumi</button>
+                  
                 </div>
+             
             </form> <!-- Form END -->
-          
+
         </div>
     </div>
 </div>
