update profile ,home  and api service

--- a/amigurumi-app/src/app/home/home.component.html
+++ b/amigurumi-app/src/app/home/home.component.html
@@ -1,24 +1,16 @@
 <div class="container">
   <div class="row">
-    
-      <!-- Page title -->
-      <div class="welcome-info" >
-        <h1>Welcome to Amigurumi</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur expedita odit totam qui quod omnis
-          facilis a quas quibusdam laboriosam accusantium id aliquid nostrum, consectetur unde dolor! Temporibus, maxime
-          placeat!</p>
-         
-      </div>
-      <nav class=" welcome-info navbar bg-body-tertiary">
-        <div class="container-fluid">
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-primary" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
 
+    <!-- Page title -->
+    <div class="welcome-info">
+      <h1>Welcome to Amigurumi</h1>
+      <hr>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis excepturi, porro veritatis odit explicabo vel
+        voluptas repellendus exercitationem nesciunt odio dolor molestiae soluta illum perspiciatis dolorem aut dolore,
+        recusandae animi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum est, asperiores quos harum
+        voluptas consequatur possimus dolorum sit. Animi aut accusantium fugit deserunt autem reprehenderit accusamus
+        ullam earum culpa voluptatem.</p>
+    </div>
 
-    
   </div>
 </div>
