--- a/amigurumi-app/src/app/user/profile/profile.component.html
+++ b/amigurumi-app/src/app/user/profile/profile.component.html
@@ -217,8 +217,10 @@
                   </div>
                   <!--No likeds-->
                   <div class="alert alert-danger" role="alert" *ngIf="likedProducts.length <=0">
-                    <p>No lecked products from this user!</p>
+                    <p>No slecked products from this user!</p>
                   </div>
+
+
                 </div>
               </a>
             </div>
