--- a/amigurumi-app/src/app/products/products.component.html
+++ b/amigurumi-app/src/app/products/products.component.html
@@ -1,4 +1,4 @@
 <ul>
-    <app-product *ngFor="let p of products" [product]="p" [productDesc]="p.description">
-    </app-product>
+    <!-- <app-product *ngFor="let p of products" [product]="p" [productDesc]="p.description">
+    </app-product> -->
 </ul>
