--- a/amigurumi-app/src/app/user/profile/profile.component.css
+++ b/amigurumi-app/src/app/user/profile/profile.component.css
@@ -182,3 +182,9 @@ input.ng-invalid.ng-touched {
     margin-top: 0.5rem !important;
     margin-bottom: 0.5rem !important;
 }
+.center-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height: 100vh;  */
+  }
