update profile-add fullName

--- a/amigurumi-app/src/app/user/profile/profile.component.css
+++ b/amigurumi-app/src/app/user/profile/profile.component.css
@@ -188,3 +188,6 @@ input.ng-invalid.ng-touched {
     align-items: center;
     /* height: 100vh;  */
   }
+  .container {
+    padding-bottom: 6rem;
+}
