--- a/amigurumi-app/src/app/user/profile/profile.component.html
+++ b/amigurumi-app/src/app/user/profile/profile.component.html
@@ -207,7 +207,7 @@
                   style="width: 90px; height: 90px; margin-top: -45px;"> <i
                     class="fa-regular fa-thumbs-up fa-3x head-icon" style="color: blue;"></i></div>
                 <div class="card-body text-center">
-                  <h3 class="card-title pt-1">Liked Project</h3>
+                  <h3 class="card-title pt-1">Liked Products</h3>
                   <p class="card-text text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     exercitation ullamco laboris nisi ut aliquip.</p><span
