--- a/amigurumi-app/src/app/product-list/product-list.component.css
+++ b/amigurumi-app/src/app/product-list/product-list.component.css
@@ -54,7 +54,7 @@ img {
     height: 250px;
     margin: 20px auto;
     border-radius: .25rem;
-    border: 1px ;
+    border: 1px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     opacity: 0.8;
 
@@ -62,7 +62,7 @@ img {
 }
 
 img:hover {
-    transform: scale(1.04); 
+    transform: scale(1.04);
     opacity: 1.0;
 }
 
@@ -157,12 +157,19 @@ a {
 
 .card-img {
     width: 100%;
-    height: 400px; /* Adjust the height as needed */
+    height: 400px;
+    /* Adjust the height as needed */
     object-fit: cover;
 }
-.center-wrapper {
+
+.center-wrapper,
+.no-products {
     display: flex;
     justify-content: center;
     align-items: center;
     /* height: 100vh;  */
-  }
+}
+
+.container {
+    padding-bottom: 4rem;
+}
