--- a/amigurumi-app/src/app/product/new-product/new-product.component.css
+++ b/amigurumi-app/src/app/product/new-product/new-product.component.css
@@ -77,3 +77,6 @@ body{margin-top:20px;
       .custom-btn:hover {
         color: white;
       }
+      .container {
+        padding-bottom: 6rem;
+    }
