--- a/amigurumi-app/src/app/user/register/register.component.html
+++ b/amigurumi-app/src/app/user/register/register.component.html
@@ -1,3 +1,13 @@
+
+<p class="notification error-message" *ngIf="errorMsg">
+    {{errorMsg}}
+    <!-- {{apiError$ | async |json}} -->
+</p>
+<p class="notification success-message" *ngIf="successMsg">
+    {{successMsg}}
+    <!-- {{apiError$ | async |json}} -->
+</p>
+
 <div class="container">
 
 	<div class="card">
@@ -9,14 +19,14 @@
 		</div>
 		<form #registerForm="ngForm" class="card-form" >
 		<!-- <form #registerForm="ngForm" class="card-form" (ngSubmit)="submitHandler(registerForm)"> -->
+
 			<div class="input">
 				<input type="text" id="fullName" name="fullName" class="input-field" required ngModel
 					#fullNameInput="ngModel" minlength="4" />
-
 				<label for="fullName" class="input-label"> <i class="fa-solid fa-user-large"></i> Full name</label>
 			</div>
 			<!--fullName error msg-->
-			<!-- <ng-container *ngIf="fullNameInput.touched">
+			<ng-container *ngIf="fullNameInput.touched">
 				<div class="error" *ngIf="fullNameInput.errors?.['required'] ">
 
 					Full name is required!
@@ -27,7 +37,8 @@
 					than
 					{{fullNameInput.errors?.['minlength'].requiredLength}} ...
 				</div>
-			</ng-container> -->
+			</ng-container>
+			
 			<div class="input">
 				<input type="text" id="email" name="email" class="input-field" ngModel email required
 					#emailInput="ngModel" />
@@ -48,7 +59,7 @@
 
 			<div class="input">
 				<input type="password" id="password" name="password" class="input-field" ngModel required
-					#passwordInput="ngModel" [appMaxCount]="20" minlength="6" />
+					#passwordInput="ngModel" [appMaxCount]="15" minlength="6" />
 				<label for="password" class="input-label"><i class="fa-solid fa-lock"></i> Password</label>
 			</div>
 
@@ -95,11 +106,11 @@
 					(click)="register(fullNameInput.value,emailInput.value,passwordInput.value)"
 					
 					>Submit</button>
-					<!-- (click)="register(fullNameInput.value,emailInput.value,passwordInput.value,user.gender)" -->
+					
 			</div>
 		</form>
 		<div class="card-info">
-			<p>If you already have a registration, please <a routerLink="/login">Log in</a></p>
+			<p>If you already have a registration, please <a routerLink="/auth/login">Log in</a></p>
 		</div>
 	</div>
 </div>
